# lytspel

./: .gitignore  .pylintrc  CHANGELOG.md  INSTALL-USE.md  LICENSE  LICENSE.txt  Makefile  README.md  comment-dict.txt  devnotes.md  dictbuilder.hs  files.md  phoneng.cabal  phonetic-english.cabal  setup.py
conv/: .pylintrc  Makefile  comment-dict.txt  lytspel  lytspel-dict.csv  lytspel.py  lytspelconv  lytspelconv.py  test_lytspel.py  test_lytspelconv.py
data/: Makefile  cmudict-phonemes.csv  cmudict-phonemes.txt  compound-blacklist.csv  compound-stress.csv  compound-whitelist.csv  compounds-manual.csv  compounds.csv  custom.csv  dont-convert-pre-stressed-e.csv  endpron.csv  extra-words.txt  lytspel-dict.csv  lytspel-phonemes.csv  lytspel-phonemes.txt  moby-phonemes.csv  moby-phonemes.txt  phoneme-map.csv  phonetic-dict-candidates.csv  phonetic-dict.csv  phonetic-dict.txt  pre-stressed-vowel.csv  prefix.csv  prefix.list  startpron.csv  startspellings.csv  suffix.csv  suffix.list  tagify.csv  untagify.csv  words-not-in-scowl.txt
docs/: lytspel-on-one-page.md  lytspel-on-one-page.odt  lytspel-on-two-pages.md  lytspel-on-two-pages.odt
extensions/firefox/: README.md  gulpfile.js  lytspelify.js  managedict.js  manifest.json  package.json
extensions/firefox/data/: lytspel-dict.csv
extensions/firefox/icons/: LICENSE
extensions/firefox/src/: lytspelify.js  managedict.js
extensions/firefox/static/: manifest.json
extensions/firefox/test/: Makefile  README.txt  expected.html  input.html  library.js  style.css
legacy/scripts/: partsplitter
lytspel/: __init__.py  conv.py  dict.py  test.py  util.py  web.py
lytspel/static/: scripts.js  styles.css
lytspel/templates/: base.html  sample.html  startpage.html  web.html
samples/: NOTE.md  alice.md  gettysburg.md  mad-tea-party.pron  mad-tea-party.txt  testcases.pron  testcases.txt  udhr.md  universal-declaration-of-human-rights.pron  universal-declaration-of-human-rights.txt
scripts/: PhonEng.pm  addespeak  candsel  csvdict  decompose  lytspelify  mergeprons  partsplitter
src/: PhonEng.hs  dictbuilder.hs  pronounce.hs
test/: Makefile  expected-output.epub  expected-output.html  expected-output.txt  expected-output.xhtml  input.epub  input.html  input.txt  input.xhtml  style.css
web-src/: NOTE.md
webfiles/: NOTE.md  contact.md  favicon.odg  intro.md  privacy.md
