name:                phoneng
version:             0.1.0.0
synopsis:            Shows how English is pronounced
description:
    The pronounce command shows how English texts are pronounced.
    The lytspel command converts them into a simplified spelling.
    The provided tools can also be used to implement your own
    spelling reform proposals or to adapt the chosen respellings as needed.
homepage:            https://github.com/ChristianSi/phoneng
license:             BSD3
license-file:        LICENSE.txt
author:              Christian Siefkes
maintainer:          christian@siefkes.net
copyright:           Copyright (c) 2014-2015 Christian Siefkes
category:            Natural Language Processing
build-type:          Simple
extra-source-files:  README.txt
cabal-version:       >=1.10
data-dir:            data
data-files:          *.txt

executable dictbuilder
  main-is:             dictbuilder.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6,
                       bytestring >=0.10,
                       case-insensitive >=1.1,
                       cond >=0.4,
                       containers >=0.5,
                       directory >=1.2,
                       edit-distance >=0.2,
                       filepath >=1.3,
                       process >=1.1,
                       text >=0.11
  -- hs-source-dirs:
  default-language:    Haskell2010
  Ghc-options:         -Wall -O2 -with-rtsopts=-K32m
