name:                phoneng
version:             0.1.0.0
synopsis:            Shows how English is pronounced
description:
    The pronounce command shows how English texts are pronounced.
    The lytspel command converts them into a simplified spelling.
    The provided tools can also be used to implement your own
    spelling reform proposals or to adapt the chosen respellings as needed.
homepage:            https://github.com/ChristianSi/phoneng
license:             BSD3
license-file:        LICENSE.txt
author:              Christian Siefkes
maintainer:          christian@siefkes.net
copyright:           Copyright (c) 2014-2018 Christian Siefkes
category:            Natural Language Processing
build-type:          Simple
extra-source-files:  README.txt
cabal-version:       >=1.10
data-dir:            data
data-files:          *.txt

executable dictbuilder
  main-is:             dictbuilder.hs
  hs-source-dirs:      src
  other-modules:       PhonEng
  build-depends:       base >=4.8.0.0,
                       bytestring >=0.10.6.0,
                       case-insensitive >=1.2.0.4,
                       cond >=0.4.1.1,
                       containers >=0.5.6.3,
                       directory >=1.2.2.0,
                       edit-distance >=0.2.2.1,
                       filepath >=1.4.0.0,
                       process >=1.2.3.0,
                       text >=1.2.1.3
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -with-rtsopts=-K32m


--Commented out since chatter fails to compile with ghc 7.10.2
--executable pronounce
--  main-is:             pronounce.hs
--  hs-source-dirs:      src
--  other-modules:       Paths_phoneng,
--                       PhonEng
--  build-depends:       base >=4.8.0.0,
--                       case-insensitive >=1.2.0.4,
--                       chatter >=0.8.0.0,
--                       containers >=0.5.6.3,
--                       text >=1.2.1.3
--  default-language:    Haskell2010
--  ghc-options:         -Wall -O2
